--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "redux-logger": "^3.0.6"
   }
 }
